cabal-version:       >=1.10

name:                scratch-accelerate-blas
version:             0.1.0.0
license-file:        LICENSE
author:              statusfailed
maintainer:          sf@statusfailed.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable scratch-accelerate-blas
  main-is:             Main.hs
  build-depends:        base >=4.13 && <4.14
                      , accelerate >= 1.3
                      , accelerate-llvm >= 1.3
                      , accelerate-llvm-native >= 1.3
                      , accelerate-llvm-ptx >= 1.3
                      , accelerate-blas >= 0.3

  default-language:    Haskell2010
  ghc-options: -threaded
